--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome to Orthodox Saint Database Application"
+        android:text="Welcome to EMS"
         app:layout_constraintBottom_toBottomOf="parent"
         android:textSize="15sp"
         android:textColor="@color/black"
