Added the payment part to purchase more credit when they run out, made the free trial to 2 credits. New update is to send files from EMS.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
         android:src="@drawable/settings"
         android:layout_marginLeft="340dp"
         android:layout_marginRight="10dp"
+        app:tint="?android:textColorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
