--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -65,8 +65,8 @@
         android:layout_width="44dp"
         android:layout_height="39dp"
         android:src="@drawable/cancel"
-        android:textColor="?android:textColorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:tint="?android:textColorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
